# research-paper-analysis-toolkit

./: .env.example  .gitignore  CITATION.cff  README.md  ruff.toml
paper1_survey/: README.md  pyproject.toml  requirements.txt
paper1_survey/config/: survey_columns.example.json
paper1_survey/data/: README.md
paper1_survey/docs/: NOTEBOOK_AUDIT.md
paper1_survey/scripts/: 01_prepare_survey_data.py  02_run_pilot_psychometrics.py  03_run_main_survey_analysis.py  04_code_open_responses.py  05_build_annotation_workbook.py
paper1_survey/src/paper1_survey/: __init__.py  cleaning.py  descriptives.py  io.py  ordinal_models.py  pipeline.py  psychometrics.py  qualitative.py  schema.py
paper1_survey/tests/: test_cleaning.py  test_psychometrics.py  test_qualitative.py
paper2_assignment_corpus/: README.md  pyproject.toml  requirements.txt
paper2_assignment_corpus/config/: assignment_corpus.example.json  detector_weights.example.json
paper2_assignment_corpus/data/: README.md  manifest_template.csv
paper2_assignment_corpus/docs/: NOTEBOOK_AUDIT.md
paper2_assignment_corpus/scripts/: 01_build_manifest.py  02_preprocess_assignments.py  03_collect_detector_scores.py  04_run_primary_analysis.py  05_run_adjusted_models.py  06_run_conflict_analysis.py  07_optional_textual_feature_coding.py  08_prepare_arabic_corpus.py  09_prepare_code_corpus.py
paper2_assignment_corpus/src/paper2_assignments/: __init__.py  adjusted_models.py  arabic.py  code_corpus.py  collection.py  conflict.py  detector_clients.py  io_utils.py  pipeline.py  scoring.py  (+4 more)
paper2_assignment_corpus/tests/: test_code_corpus.py  test_conflict.py  test_scoring.py  test_statistics.py
paper3_detector_benchmark/: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
paper3_detector_benchmark/config/: benchmark.example.json
paper3_detector_benchmark/data/: example_results.csv  manifest_template.csv
paper3_detector_benchmark/docs/: DATA_LAYOUT.md  NOTEBOOK_AUDIT.md  SECURITY_AND_REPRODUCIBILITY.md
paper3_detector_benchmark/scripts/: 01_build_manifest.py  02_collect_detector_scores.py  03_run_benchmark_analysis.py  04_prepare_code_corpus.py  05_generate_matched_samples.py  06_humanize_english_text.py  07_optional_qualitative_review.py  08_prepare_arabic_corpus.py
paper3_detector_benchmark/tests/: test_conflict.py  test_metrics.py  test_statistics.py  test_weights.py
(+20 files in other folders)
