[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper2-assignment-corpus"
version = "1.0.0"
description = "Reproducible code for detector-indicated AI-writing signals in authentic university assignments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "requests>=2.31",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "openpyxl>=3.1",
  "xlsxwriter>=3.1",
  "python-docx>=1.1",
  "pymupdf>=1.24"
]

[project.optional-dependencies]
api = ["openai>=1.0"]
ocr = ["openai>=1.0", "pillow<12", "reportlab>=4.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
