[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper3-ai-detector-benchmark"
version = "1.0.0"
description = "Reproducible code for a multilingual benchmark of commercial AI-detection tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "requests>=2.31",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "openpyxl>=3.1",
  "xlsxwriter>=3.1"
]

[project.optional-dependencies]
generation = ["openai>=1.0"]
ocr = ["openai>=1.0", "pymupdf>=1.24", "pillow<12"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
